auction-common/src/main/kotlin/org/example/common/global/error/LoginException.kt
package org.example.common.global.error

class LoginException(message: String?) : RuntimeException(message)
